Bug 116623 - [EMF] FILEOPEN The curves extend outside the plot area
Summary: [EMF] FILEOPEN The curves extend outside the plot area
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.7.2 release
Hardware: All All
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on: 142639
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2018-03-25 15:16 UTC by johan
Modified: 2026-06-05 14:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example files (53.35 KB, application/zip)
2018-03-25 15:16 UTC, johan
Details
Example DOCX (83.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-11-16 12:22 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description johan 2018-03-25 15:16:14 UTC
Description:
Migrated from bug 116335 (part 3).

Some parts of certain EMF images are not displayed correctly. An example is attached. When it is inserted into Writer or opened in Draw, the curves extend outside the plot area even though they should not.

Example contents:
- An EMF file 
- A screenshot showing this problem in Writer
- A reference rendering in Microsoft Word (note that this screenshot also contains another, unrelated image)


Please note that the same problem occurs in Inkscape.

Steps to Reproduce:
1. Download and unpack the example files
2. Insert the EMF file into Writer or open it in Draw
3. Look at the plot curve endpoints 
4. Compare with the reference rendering. You can also use Microsoft software to view the EMF file

Actual Results:  
The curves extend outside the plot area

Expected Results:
The curves should stay inside the plot area


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested with:

Version: 6.0.2.1
Build ID: f7f06a8f319e4b62f9bc5095aa112a65d2f3ac89
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI); Calc: group


Version: 5.2.7.2
Build ID: 1:5.2.7-1+deb9u2
CPU Threads: 4; OS Version: Linux 4.9; UI Render: default; VCL: gtk2; 
Locale: fi-FI (fi_FI.utf8); Calc: group


Version: 5.4.5.1
Build ID: 79c9829dd5d8054ec39a82dc51cd9eff340dbee8
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI); Calc: group


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 johan 2018-03-25 15:16:39 UTC
Created attachment 140873 [details]
example files
Comment 2 QA Administrators 2019-04-14 02:49:41 UTC Comment hidden (obsolete)
Comment 3 johan 2019-07-06 13:14:04 UTC
Tested on Windows 7, 32-bit, with a clean installation of:

Version: 6.2.5.2 (x86)
Build ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU threads 4; OS: Windows 6.1; Rendering component: default; VCL: win; 
Locale: fi-FI (fi_FI); UI Language: fi-FI
Calc: threaded


This problem still occurs.



Additional note which may be useful: This problem occurs in Inkscape (0.92.4 tested) as well and has already been reported to Inkscape developers.
Comment 4 Timur 2020-11-16 12:22:53 UTC
Created attachment 167330 [details]
Example DOCX

Repro 7.1+ as of today. 

Bad practice to attach ZIP. I attach DOCX from MSO with EMF inserted, easiest for testing via command line.
Comment 5 Xisco Faulí 2022-05-03 11:32:05 UTC
Dear Bartosz,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assign it back to yourself if you're still working on this.
Comment 6 QA Administrators 2024-05-03 03:16:27 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2026-05-04 03:13:18 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2026-05-12 05:41:24 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d271bc432b87ae084b2463caee82dcf13fbeb9e9

tdf#116623 emfio: apply RGN_COPY region data in EMR_EXTSELECTCLIPRGN

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.